--- a/style.css
+++ b/style.css
@@ -25,6 +25,11 @@ nav ul li {
     margin-right: 25px;
 }
 
+nav ul li img{
+    width: 50px;
+    height: 50px;
+}
+
 .nav-left {
     flex: 50%;
 }
